[gd_scene load_steps=3 format=3 uid="uid://b4vsnxiwmg1q3"]

[ext_resource type="Script" path="res://src/GUI/inventory_item.gd" id="1_5yckh"]
[ext_resource type="Texture2D" uid="uid://bqrpuch1ole7g" path="res://assets/Shikashi's Fantasy Icons Pack v2/#1 - Transparent Icons.png" id="2_q7x3v"]

[node name="InventoryItem" type="ReferenceRect"]
script = ExtResource("1_5yckh")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_q7x3v")
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 12.0
offset_top = -2.0
offset_right = 52.0
offset_bottom = 24.0
text = "123"

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
